# MeshLib

./: .gitignore  CMakeLists.txt  LICENSE  MeshLibConfig.cmake.in  README.md  readme
include/: MNIObjIO.h  Mesh.h  MeshIO.h  VtkIO.h
include/Geodesic/: Geodesic.h  GeodesicA.h  GeodesicPath.h
include/Geodesic/gw/gw_core/: GW_Config.h  GW_Face.inl
include/Geodesic/gw/gw_geodesic/: GW_GeodesicMesh.h  GW_GeodesicMeshA.h  GW_GeodesicMeshA.inl  GW_TriangularInterpolation_ABC.h
include/Geodesic/gw/gw_maths/: GW_MathsConfig.h
include/Util/: AABB.h  AABB_Sphere.h  Geom.h  Slicer.h  SphericalHarmonics.h  SurfaceUtil.h
src/: MNIObjIO.cpp  Mesh.cpp  MeshIO.cpp  VtkIO.cpp
src/Geodesic/: Geodesic.cpp  GeodesicA.cpp  GeodesicPath.cpp
src/Geodesic/gw/gw_core/: GW_Config.cpp
src/Geodesic/gw/gw_geodesic/: GW_GeodesicMeshA.cpp
src/Util/: AABB.cpp  AABB_Sphere.cpp  Geom.cpp  Slicer.cpp  SphericalHarmonics.cpp  SurfaceUtil.cpp
